<resources>
    <string name="app_name">Layout Inspector</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="layout_inspector">Layout \nInspector</string>
    <string name="welcome_text">Welcome to Layout Inspector, your go-to tool for effortless layout exploration! 🎉</string>
    <string name="setup_text">In order to use Layout Inspector, you\'ll need to set it as your default assistant app.\nDon\'t worry, it\'s a simple process, and i\'ll guide you through it seamlessly.</string>
    <string name="note">You may experience occasional crashes, especially on certain devices (Realme).\nUnfortunately, the cause of these crashes is beyond my control.😅\n\nIt\'s related to the intricate workings of the Android operating system, which can vary between different manufacturers and devices.\nThis variation can sometimes lead to unexpected behavior that may result in app crashes</string>
    <string name="info_step_2">Choose Layout Inspector</string>
    <string name="info_step_3">Enable Use text from screen\n(Required to get information on screen content, layout inspector can only access it when explicitly invoked by user and only for views not declared as secure.)</string>
    <string name="info_step_4">Enable Use screenshot (Optional)</string>
    <string name="btn_open_assist_setting">Open Default Digital Assistant App Settings</string>
    <string name="gesture_instruction_info">Looks like you\'re all set 👍\n\nNow you can activate the layout inspector like google assistant.\nJust swipe up from a bottom corner to invoke Layout inspector if you are using gesture navigation otherwise you can press and hold Home button.</string>
    <string name="empty_treeview_msg">Whoopsie daisy! This activity has its curtains drawn, no peeking allowed! 🎭🙈 </string>
</resources>