<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="36dp"
        tools:ignore="ContentDescription">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:background="@drawable/circle"
            android:src="@drawable/rounded_architecture_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/silkscreen"
            android:gravity="center"
            android:text="@string/layout_inspector"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvWelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/welcome_text"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewInfo"
            style="?materialCardViewFilledStyle"
            android:layout_width="match_parent"
            app:cardCornerRadius="18dp"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:breakStrategy="balanced"
                android:gravity="start"
                android:padding="12dp"
                android:layout_gravity="center"
                android:drawablePadding="8dp"
                android:text="@string/setup_text"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:drawableStartCompat="@drawable/rounded_info_24" />

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewInfo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOpenAssistSetting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="@drawable/rounded_counter_1_24"
                    android:gravity="start|center_vertical"
                    android:text="@string/btn_open_assist_setting"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                     />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:background="@drawable/rounded_open_in_new_24"/>

            </LinearLayout>

            <TextView
                android:id="@+id/info_step_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:gravity="start|center_vertical"
                android:text="@string/info_step_2"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:drawableStartCompat="@drawable/rounded_counter_2_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rounded_counter_3_24"/>

                <TextView
                    android:id="@+id/info_step_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingTop="2dp"
                    android:layout_gravity="start"
                    android:gravity="start|top"
                    android:text="@string/info_step_3"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            </LinearLayout>

            <TextView
                android:id="@+id/info_step_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:gravity="start|center_vertical"
                android:text="@string/info_step_4"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:drawableStartCompat="@drawable/rounded_counter_4_24" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

